removed admin endpoints from open swagger
